# LibGraphics

./: .gitignore  .gitmodules  CMakeLists.txt
include/: window.h
include/LibGraphics/: standard_string.h  string.h  window.h
include/lib_graphics/: canvas.h  color.h  drawable.h  drawable_vertex_buffer.h  rectangle.h  string.h  texture.h  vector.h  vertex.h  vertex_buffer.h  window.h
include/libgraphics/: color.h  drawable.h  drawable_vertex_buffer.h  rectangle.h  texture.h  vertex.h  vertex_buffer.h  window.h
source/: color.cpp  drawable.cpp  drawable_vertex_buffer.cpp  rectangle.cpp  string.cpp  texture.cpp  vertex_buffer.cpp
source/LibGraphics/: string.cpp
source/LibGraphics/windows/: standard_string.cpp  standard_string.h  string.cpp  string_impl.h  window.cpp
source/lib_graphics/: canvas.cpp  color.cpp  drawable.cpp  drawable_vertex_buffer.cpp  opengl.cpp  opengl.h  rectangle.cpp  string.cpp  texture.cpp  vertex_buffer.cpp  window.cpp  window_impl.h
source/lib_graphics/linux/: opengl_linux.cpp  opengl_linux.h  window_impl.cpp
source/lib_graphics/linux/opengl/: opengl_linux.h
source/lib_graphics/opengl/: opengl.h  opengl_drawable.cpp  opengl_drawable.h  shader.cpp  shader.h  shader_program.h  window.cpp  window_impl.h
source/lib_graphics/opengl/shaders/: fragment.glsl  vertex.glsl  vertex_texture.glsl
source/lib_graphics/windows/: opengl.cpp  opengl_windows.cpp  opengl_windows.h  utilities.h  window.cpp  window_impl.cpp
source/lib_graphics/windows/opengl/: opengl_windows.cpp  opengl_windows.h  window_impl.cpp
source/linux/opengl/: window_impl.cpp
source/opengl/: opengl.cpp  opengl_drawable.cpp  opengl_drawable.h  shader.cpp  shader.h  shader_program.h  window.cpp  window_impl.h
source/opengl/shaders/: fragment_texture.glsl  vertex.glsl
source/windows/opengl/: window.cpp  window_impl.cpp
test/: CMakeLists.txt  main.cpp
windows/include/: standard_string.h  standard_string_windows.h
windows/opengl/source/: window.cpp
windows/source/: standard_string_windows.cpp  string.cpp
